scrollbar fix

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -15,17 +15,17 @@
     width: 100%;
     height: 90%;
     overflow-y: auto;
-    padding-right: 20px;
+    /* padding-right: 20px; */
     box-sizing: content-box;
     /* z-index: 100; */
 }
 
 .noteList-content::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
 }
 
 .noteList-content::-webkit-scrollbar-track {
-    background: black;
+    background: #f1f1f1;
     border-radius: 10px;
 }
 
