--- a/src/components/notes/notes.css
+++ b/src/components/notes/notes.css
@@ -1,9 +1,9 @@
 .standardNote{
     position: relative;
-    width: 35%;
-    height: 10%;
+    width: 90%;
+    height: 15%;
     /* top: -13%; */
-    margin-left: 30%;
+    margin-left: 10%;
     display: flex;
     flex-direction: row;
     /* gap: 5px; */
